feat: replace Gold Parquet sink with Apache Iceberg (local Hadoop catalog)
- Add iceberg-spark-runtime-3.5_2.12 1.7.1 to build.sbt; fix merge strategy
  to concat META-INF/services so Iceberg SPI registrations survive assembly
- Register local Hadoop catalog (./warehouse) in BuildAnalytics SparkSession
- Replace Gold parquet write with writeTo(Iceberg table).overwritePartitions()
- Add IcebergOps: logSnapshotHistory, rollback, addColumn wired into pipeline
- Update application.conf Gold output-path to Iceberg table reference
- Rewrite README to document Iceberg as the load-bearing Gold sink